--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -353,41 +353,22 @@
   <option value="" disabled selected>Select a competition…</option>
 
   <!-- EXISTING OPTIONS (TEST SEASON) -->
-  <option value="TEST SEASON - ACC - BEGINNER CONSOLE">TEST SEASON - ACC - BEGINNER CONSOLE</option>
-  <option value="TEST SEASON - ACC - BEGINNER PC">TEST SEASON - ACC - BEGINNER PC</option>
-  <option value="TEST SEASON - ACC - PRO AM CONSOLE">TEST SEASON - ACC - PRO AM CONSOLE</option>
-  <option value="TEST SEASON - ACC - CONSOLE OPEN TRACK">TEST SEASON - ACC - CONSOLE OPEN TRACK</option>
-  <option value="TEST SEASON - ACC - CONSOLE MAX MINI ENDURO">TEST SEASON - ACC - CONSOLE MAX MINI ENDURO</option>
-  <option value="TEST SEASON - ACC - PC GT3GT4 MULTI CLASS">TEST SEASON - ACC - PC GT3GT4 MULTI CLASS</option>
-  <option value="TEST SEASON - ACC - PC OPEN TRACK">TEST SEASON - ACC - PC OPEN TRACK</option>
-  <option value="TEST SEASON - LMU MULTICLASS">TEST SEASON - LMU MULTICLASS</option>
-  <option value="TEST SEASON - RACEROOM">TEST SEASON - RACEROOM</option>
-  <option value="TEST SEASON - ACC - PRO AM PC">TEST SEASON - ACC - PRO AM PC</option>
-  <option value="TEST SEASON - ACC - ENDURO SOLO">TEST SEASON - ACC - ENDURO SOLO</option>
-  <option value="TEST SEASON - ACC - ENDURO TEAMS">TEST SEASON - ACC - ENDURO TEAMS</option>
-  <option value="TEST SEASON - ACC - GMC">TEST SEASON - ACC - GMC</option>
-  <option value="TEST SEASON - ACC - AMATEUR PC">TEST SEASON - ACC - AMATEUR PC</option>
-  <option value="TEST SEASON - ACC - AMATEUR CONSOLE">TEST SEASON - ACC - AMATEUR CONSOLE</option>
-  <option value="TEST SEASON - AC - all game modes">TEST SEASON - AC – all game modes</option>
-  <option value="TEST SEASON - AC EVO - all game modes">TEST SEASON - AC EVO – all game modes</option>
-  <option value="TEST SEASON - F1 2025">TEST SEASON - F1 2025</option>
+<option value="SEASON 1 - AC EVO - BMW M2 CUP SERIES">SEASON 1 - AC EVO - BMW M2 CUP SERIES</option>
+<option value="SEASON 1 - RACEROOM - SERIES">SEASON 1 - RACEROOM - SERIES</option>
+<option value="SEASON 1 - PMR SERIES">SEASON 1 - PMR SERIES</option>
 
-  <!-- NEW OPTIONS YOU ASKED FOR (SEASON 1) -->
-  <option value="SEASON 1 - RACEROOM VTCC">SEASON 1 - RACEROOM VTCC</option>
-  <option value="SEASON 1 - RACEROOM N-GT">SEASON 1 - RACEROOM N-GT</option>
-  <option value="SEASON 1 - PMR - MX-5">SEASON 1 - PMR – MX-5</option>
+<option value="SEASON 1 - ACC PC - BEGINNERS">SEASON 1 - ACC PC - BEGINNERS</option>
+<option value="SEASON 1 - ACC PC - OPEN TRACK">SEASON 1 - ACC PC - OPEN TRACK</option>
+<option value="SEASON 1 - ACC PC - PRO AM SERIES">SEASON 1 - ACC PC - PRO AM SERIES</option>
 
-  <!-- SCREENSHOT ITEMS (SEASON 1) -->
-  <option value="SEASON 1 - AC EVO - BMW M2 CUP SERIES">SEASON 1 - AC EVO - BMW M2 CUP SERIES</option>
-  <option value="SEASON 1 - ACC PC - BEGINNERS">SEASON 1 - ACC PC - BEGINNERS</option>
-  <option value="SEASON 1 - ACC CONSOLE">SEASON 1 - ACC CONSOLE</option>
-  <option value="SEASON 1 - RACEROOM - SERIES TBA">SEASON 1 - RACEROOM - SERIES TBA</option>
-  <option value="SEASON 1 - ACC - MAX MINI ENDURO">SEASON 1 - ACC - MAX MINI ENDURO</option>
-  <option value="SEASON 1 - ACC PC - OPEN TRACK">SEASON 1 - ACC PC - OPEN TRACK</option>
-  <option value="SEASON 1 - PMR SERIES TBA">SEASON 1 - PMR SERIES TBA</option>
-  <option value="SEASON 1 - ACC TEAM ENDURO">SEASON 1 - ACC TEAM ENDURO</option>
-  <option value="SEASON 1 - ACC SOLO ENDURO">SEASON 1 - ACC SOLO ENDURO</option>
-  <option value="SEASON 1 - ACC PC - PRO AM SERIES">SEASON 1 - ACC PC - PRO AM SERIES</option>
+<option value="SEASON 1 - ACC CONSOLE - OPEN TRACK">SEASON 1 - ACC CONSOLE - OPEN TRACK</option>
+<option value="SEASON 1 - ACC CONSOLE - FRIDAY FINESSE">SEASON 1 - ACC CONSOLE - FRIDAY FINESSE</option>
+<option value="SEASON 1 - ACC CONSOLE - MAX MINI ENDURO">SEASON 1 - ACC CONSOLE - MAX MINI ENDURO</option>
+
+<option value="SEASON 1 - ACC TEAM ENDURO">SEASON 1 - ACC TEAM ENDURO</option>
+<option value="SEASON 1 - ACC SOLO ENDURO">SEASON 1 - ACC SOLO ENDURO</option>
+
+
 </select>
     </div>
 
