--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -1063,42 +1063,64 @@
 
               <!-- Post-Race Coding -->
               <label for="postRaceCode-${ticketId}"><strong>Post-Race Code</strong></label>
-              <select id="postRaceCode-${ticketId}">
-                <option value="" disabled selected>— Select a code —</option>
-                <option value="RP1mi">RP1mi – Unsafe Track Rejoin (10s)</option>
-                <option value="RP1St">RP1St – Unsafe Track Rejoin (30s)</option>
-                <option value="RP1Se">RP1Se – Unsafe Track Rejoin (SG30)</option>
-                <option value="RP2mi">RP2mi – Unsafe Pit Exit / Crossing pit line (10s)</option>
-                <option value="RP2St">RP2St – Unsafe Pit Exit / Crossing pit line (30s)</option>
-                <option value="RP2Se">RP2Se – Unsafe Pit Exit / Crossing pit line (SG30)</option>
-                <option value="RP3mi">RP3mi – Blue Flag Abuse / Blocking While Lapped (5s)</option>
-                <option value="RP3St">RP3St – Blue Flag Abuse / Blocking While Lapped (15s)</option>
-                <option value="RP3Se">RP3Se – Blue Flag Abuse / Blocking While Lapped (SG30)</option>
-                <option value="RP4mi">RP4mi – Formation Lap / Start Line Infingement (30s)</option>
-                <option value="RP4St">RP4St – Formation Lap / Start Line Infingement (SG30)</option>
-                <option value="RP4Se">RP4Se – Formation Lap / Start Line Infingement (DQ)</option>
-                <option value="RP5mi">RP5mi – Illegal Overtake (5s)</option>
-                <option value="RP5St">RP5St – Illegal Overtake (15s)</option>
-                <option value="RP5Se">RP5Se – Illegal Overtake (30s)</option>
-                <option value="RP6mi">RP6mi – Late Blocking / Moving Under Braking (5s)</option>
-                <option value="RP6St">RP6St – Late Blocking / Moving Under Braking (30s)</option>
-                <option value="RP6Se">RP6Se – Late Blocking / Moving Under Braking (SG30)</option>
-                <option value="RP7mi">RP7mi – Divebomb / Overly Ambitious Lunge (10s)</option>
-                <option value="RP7St">RP7St – Divebomb / Overly Ambitious Lunge (30s)</option>
-                <option value="RP7Se">RP7Se – Divebomb / Overly Ambitious Lunge (SG30)</option>
-                <option value="RP8Mi">RP8Mi – Rear-End Collision (5s)</option>
-                <option value="RP8St">RP8St – Rear-End Collision (15s)</option>
-                <option value="RP8Se">RP8Se – Rear-End Collision (SG30)</option>
-                <option value="RP9Mi">RP9Mi – Not Leaving Room (5s)</option>
-                <option value="RP9St">RP9St – Not Leaving Room (15s)</option>
-                <option value="RP9Se">RP9Se – Not Leaving Room (SG30)</option>
-                <option value="RP10Mi">RP10Mi – Excessive flashing (10s)</option>
-                <option value="RP10St">RP10St – Excessive flashing (10s)</option>
-                <option value="RP10Se">RP10Se – Excessive flashing (10s)</option>
-                <option value="RP11Mi">RP11Mi – Intentional Ramming (DQ)</option>
-                <option value="RP11St">RP11St – Intentional Ramming (DQ)</option>
-                <option value="RP11Se">RP11Se – Intentional Ramming (DQ)</option>
-              </select>
+<select id="postRaceCode-${ticketId}">
+  <option value="" disabled selected>— Select a code —</option>
+
+  <option value="NFA">NFA – No Further Action (None)</option>
+
+  <option value="RP1mi">RP1mi – Unsafe Track Rejoin (10s)</option>
+  <option value="RP1st">RP1st – Unsafe Track Rejoin (30s)</option>
+  <option value="RP1Se">RP1Se – Unsafe Track Rejoin (SG30)</option>
+
+  <option value="RP2mi">RP2mi – Unsafe Pit Exit / Crossing pit line (10s)</option>
+  <option value="RP2st">RP2st – Unsafe Pit Exit / Crossing pit line (30s)</option>
+  <option value="RP2Se">RP2Se – Unsafe Pit Exit / Crossing pit line (SG30)</option>
+
+  <option value="RP3mi">RP3mi – Blue Flag Abuse / Blocking While Lapped (5s)</option>
+  <option value="RP3st">RP3st – Blue Flag Abuse / Blocking While Lapped (15s)</option>
+  <option value="RP3Se">RP3Se – Blue Flag Abuse / Blocking While Lapped (SG30)</option>
+
+  <option value="RP4mi">RP4mi – Formation Lap / Start Line Infringement (30s)</option>
+  <option value="RP4st">RP4st – Formation Lap / Start Line Infringement (SG30)</option>
+  <option value="RP4Se">RP4Se – Formation Lap / Start Line Infringement (DQ)</option>
+
+  <option value="RP5mi">RP5mi – Illegal Overtake (Off-Track or Gained Advantage) (5s)</option>
+  <option value="RP5st">RP5st – Illegal Overtake (Off-Track or Gained Advantage) (15s)</option>
+  <option value="RP5Se">RP5Se – Illegal Overtake (Off-Track or Gained Advantage) (30s)</option>
+
+  <option value="RP6mi">RP6mi – Late Blocking / Moving Under Braking (multiple defensive moves) (5s)</option>
+  <option value="RP6st">RP6st – Late Blocking / Moving Under Braking (multiple defensive moves) (30s)</option>
+  <option value="RP6Se">RP6Se – Late Blocking / Moving Under Braking (multiple defensive moves) (SG30)</option>
+
+  <option value="RP7mi">RP7mi – Divebomb / Overly Ambitious Lunge (10s)</option>
+  <option value="RP7st">RP7st – Divebomb / Overly Ambitious Lunge (30s)</option>
+  <option value="RP7Se">RP7Se – Divebomb / Overly Ambitious Lunge (SG30)</option>
+
+  <option value="RP8mi">RP8mi – Rear-End Collision (Braking Zone) (5s)</option>
+  <option value="RP8st">RP8st – Rear-End Collision (Braking Zone) (15s)</option>
+  <option value="RP8Se">RP8Se – Rear-End Collision (Braking Zone) (SG30)</option>
+
+  <option value="RP9mi">RP9mi – Squeezing Off Track / Not Leaving Room (5s)</option>
+  <option value="RP9st">RP9st – Squeezing Off Track / Not Leaving Room (15s)</option>
+  <option value="RP9Se">RP9Se – Squeezing Off Track / Not Leaving Room (SG30)</option>
+
+  <option value="RP10mi">RP10mi – Excessive flashing (10s)</option>
+  <option value="RP10st">RP10st – Excessive flashing (10s)</option>
+  <option value="RP10Se">RP10Se – Excessive flashing (10s)</option>
+
+  <option value="RP11mi">RP11mi – Intentional Ramming (DQ)</option>
+  <option value="RP11st">RP11st – Intentional Ramming (DQ)</option>
+  <option value="RP11Se">RP11Se – Intentional Ramming (DQ)</option>
+
+  <option value="RP12mi">RP12mi – Driver Connection Issue (Mild) (10s)</option>
+  <option value="RP12st">RP12st – Driver Connection Issue (Standard) (20s)</option>
+  <option value="RP12sv">RP12sv – Driver Connection Issue (Severe) (30s)</option>
+
+  <option value="RP13mi">RP13mi – Reckless Driving (Mild) (10s)</option>
+  <option value="RP13st">RP13st – Reckless Driving (Standard) (30s)</option>
+  <option value="RP13sv">RP13sv – Reckless Driving (Severe) (DQ)</option>
+</select>
+
 
               <label for="futureAdvice-${ticketId}"><strong>Future Advice</strong></label>
               <select id="futureAdvice-${ticketId}">
