--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -1660,18 +1660,23 @@
         return;
       }
       const penaltyTimeMap = {
-        RP1mi: "10s", RP1St: "30s", RP1Se: "SG30",
-        RP2mi: "10s", RP2St: "30s", RP2Se: "SG30",
-        RP3mi: "5s",  RP3St: "15s", RP3Se: "SG30",
-        RP4mi: "30s", RP4St: "SG30",RP4Se: "DQ",
-        RP5mi: "5s",  RP5St: "15s", RP5Se: "30s",
-        RP6mi: "5s",  RP6St: "30s", RP6Se: "SG30",
-        RP7mi: "10s", RP7St: "30s", RP7Se: "SG30",
-        RP8Mi: "5s",  RP8St: "15s", RP8Se: "SG30",
-        RP9Mi: "5s",  RP9St: "15s", RP9Se: "SG30",
-        RP10Mi:"10s",RP10St:"10s",RP10Se:"10s",
-        RP11Mi:"DQ", RP11St:"DQ", RP11Se:"DQ"
-      };
+  NFA: "None",
+
+  RP1mi: "10s", RP1st: "30s", RP1Se: "SG30",
+  RP2mi: "10s", RP2st: "30s", RP2Se: "SG30",
+  RP3mi: "5s",  RP3st: "15s", RP3Se: "SG30",
+  RP4mi: "30s", RP4st: "SG30", RP4Se: "DQ",
+  RP5mi: "5s",  RP5st: "15s", RP5Se: "30s",
+  RP6mi: "5s",  RP6st: "30s", RP6Se: "SG30",
+  RP7mi: "10s", RP7st: "30s", RP7Se: "SG30",
+  RP8mi: "5s",  RP8st: "15s", RP8Se: "SG30",
+  RP9mi: "5s",  RP9st: "15s", RP9Se: "SG30",
+  RP10mi:"10s", RP10st:"10s", RP10Se:"10s",
+  RP11mi:"DQ",  RP11st:"DQ",  RP11Se:"DQ",
+
+  RP12mi:"10s", RP12st:"20s", RP12sv:"30s",
+  RP13mi:"10s", RP13st:"30s", RP13sv:"DQ"
+};
 
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF();
