--- a/admin.html
+++ b/admin.html
@@ -7,19 +7,21 @@
 
 <body>
   <h2>IFWL Admin Login</h2>
+
   <button id="loginBtn" type="button">Sign in with Google</button>
-  <p id="status">JS loaded…</p>
+  <p id="status">Loading…</p>
 
-  <!-- Firebase SDK (v8 compat) -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+  <!-- Firebase compat SDK (use ONE version consistently) -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
-  <!-- Your init -->
+  <!-- Your init (NON-module) -->
   <script src="./firebase-init.js"></script>
 
   <script>
     const statusEl = document.getElementById("status");
+    const loginBtn = document.getElementById("loginBtn");
 
     window.addEventListener("error", (e) => {
       statusEl.innerText = "JS error: " + e.message;
@@ -29,26 +31,43 @@
       statusEl.innerText = "Promise error: " + (e.reason?.message || e.reason);
     });
 
-    // sanity checks
-    statusEl.innerText =
-      "firebase: " + (typeof firebase) +
-      " | auth: " + (firebase?.auth ? "ok" : "missing") +
-      " | firestore: " + (firebase?.firestore ? "ok" : "missing");
+    // Sanity checks (and shows whether init happened)
+    try {
+      const appsCount = (firebase.apps && firebase.apps.length) ? firebase.apps.length : 0;
 
-    document.getElementById("loginBtn").addEventListener("click", async () => {
+      statusEl.innerText =
+        "firebase: " + (typeof firebase) +
+        " | apps: " + appsCount +
+        " | auth: " + (firebase?.auth ? "ok" : "missing") +
+        " | firestore: " + (firebase?.firestore ? "ok" : "missing");
+
+      if (appsCount === 0) {
+        statusEl.innerText += "  ❌ (firebase-init.js did not run)";
+      } else {
+        statusEl.innerText += "  ✅";
+      }
+    } catch (e) {
+      statusEl.innerText = "Init check failed: " + e.message;
+    }
+
+    loginBtn.addEventListener("click", async () => {
+      loginBtn.disabled = true;
       statusEl.innerText = "Clicked. Opening Google login…";
 
       try {
+        // Use the default initialized app
         const provider = new firebase.auth.GoogleAuthProvider();
         const result = await firebase.auth().signInWithPopup(provider);
 
-        const email = result.user.email.toLowerCase();
+        const email = (result.user.email || "").toLowerCase().trim();
         statusEl.innerText = "Signed in: " + email + " (checking access…)";
 
         const snap = await firebase.firestore().collection("admins").doc(email).get();
+
         if (!snap.exists) {
           statusEl.innerText = "Access denied.";
           await firebase.auth().signOut();
+          loginBtn.disabled = false;
           return;
         }
 
@@ -62,6 +81,7 @@
 
       } catch (e) {
         statusEl.innerText = "Login failed: " + e.message;
+        loginBtn.disabled = false;
       }
     });
   </script>
