--- a/steward.html
+++ b/steward.html
@@ -1,1 +1,93 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>IFWL Steward</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body { font-family: Arial, sans-serif; padding: 16px; }
+    .card { border: 1px solid #ddd; border-radius: 10px; padding: 14px; margin: 12px 0; background: #fafafa; }
+    .muted { color: #666; }
+    .ok { color: #0a7; font-weight: bold; }
+    .bad { color: #b00; font-weight: bold; }
+    button { padding: 8px 12px; cursor: pointer; }
+    code { background: #f2f2f2; padding: 2px 6px; border-radius: 6px; }
+  </style>
+</head>
+
+<body>
+  <h1>IFWL Steward Dashboard</h1>
+  <p id="status" class="muted">Loading…</p>
+
+  <div class="card">
+    <div><b>Signed in as:</b> <span id="email">—</span></div>
+    <div><b>Role:</b> <span id="role">—</span></div>
+    <div class="muted" style="margin-top:8px;">
+      Access is granted if your Firestore doc exists at <code>admins/&lt;email&gt;</code>.
+    </div>
+  </div>
+
+  <div class="card">
+    <h3 style="margin-top:0;">Actions</h3>
+    <button id="goClassifier">Back to ACC Driver Classifier</button>
+    <button id="logoutBtn" style="margin-left:8px;">Sign out</button>
+    <p class="muted" style="margin-top:10px;">
+      Next step: we can build a steward-facing ticket list here if you want it web-based.
+    </p>
+  </div>
+
+  <!-- Firebase compat SDK -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
+  <!-- Your init -->
+  <script src="./firebase-init.js"></script>
+
+  <script>
+    const statusEl = document.getElementById("status");
+    const emailEl = document.getElementById("email");
+    const roleEl = document.getElementById("role");
+    const goClassifier = document.getElementById("goClassifier");
+    const logoutBtn = document.getElementById("logoutBtn");
+
+    function setStatus(msg, ok=true) {
+      statusEl.textContent = msg;
+      statusEl.className = ok ? "ok" : "bad";
+    }
+
+    goClassifier.onclick = () => window.location.href = "index.html";
+    logoutBtn.onclick = async () => {
+      await auth.signOut();
+      window.location.href = "admin.html";
+    };
+
+    auth.onAuthStateChanged(async (user) => {
+      try {
+        if (!user) {
+          window.location.href = "admin.html";
+          return;
+        }
+
+        const email = (user.email || "").toLowerCase().trim();
+        emailEl.textContent = email;
+
+        const snap = await db.collection("admins").doc(email).get();
+        if (!snap.exists) {
+          setStatus("Access denied (no admin doc).", false);
+          await auth.signOut();
+          window.location.href = "admin.html";
+          return;
+        }
+
+        const data = snap.data() || {};
+        roleEl.textContent = data.role || "(not set)";
+        setStatus("Access OK ✅", true);
+
+      } catch (e) {
+        setStatus("Error: " + e.message, false);
+      }
+    });
+  </script>
+</body>
+</html>
 
